# QuadtreeDemo

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  QuadtreeDemo_VS-2022.sln  QuadtreeDemo_VS-2022.vcxproj  QuadtreeDemo_VS-2022.vcxproj.filters  README.md  project_tree.txt
docs/: MIT_License.txt  readme.txt  troubleshooting_guide.txt
lib/: freeglut.lib
src/: QuadTree.cpp  QuadTree.h  QuadtreeApp.cpp  QuadtreeApp.h  QuadtreeDemo.cpp  QuadtreeDemo.rc  Version.h  resource.h  stdafx.cpp  stdafx.h
src/Data/: MeshData.cpp  MeshData.h  QuadTreeData.cpp  QuadTreeData.h  RenderData.cpp  RenderData.h  ResultData.h
src/Dialogs/: AboutDialog.cpp  AboutDialog.h  DialogBase.h  MsgBoxDialog.cpp  MsgBoxDialog.h  OpenglDialog.cpp  OpenglDialog.h  QuadtreeInfoDialog.cpp  QuadtreeInfoDialog.h
src/Freeglut/: FreeglutExtensions.cpp  FreeglutExtensions.h  freeglut_ext.h  freeglut_std.h
src/Misc/: Vector.cpp  Vector.h
src/OpenGL/: OpenGLCamera.cpp  OpenGLCamera.h  OpenGLDefinitions.h  OpenGLExtensions.cpp  OpenGLExtensions.h  OpenGLFragmentShader.cpp  OpenGLFragmentShader.h  OpenGLInterface.h  OpenGLProgram.cpp  OpenGLProgram.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexShader.cpp  OpenGLVertexShader.h  gl.h  glext.h
src/Resources/: QuadtreeDemo.rc2
src/Utilities/: AppMessageHook.cpp  AppMessageHook.h  StreamUtils.h  WindowUtils.cpp  WindowUtils.h  trace.cpp  trace.h
